[package]
name = "sui-network-sdk"
version = "0.1.1"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "sui network sdk"
keywords = ["trade", "crypto", "finance", "sui", "sui-network"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/sui-network-sdk"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
hex = "0.4"
base64 = "0.22.1"
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["serde"] }
sha3 = "0.10"
bytes = "1.0"
clap = { version = "4.0", features = ["derive"] }
bcs = "0.1.6"
fastcrypto = "0.1.9"
tokio-tungstenite = "0.28.0"
url = "2.5.7"
rand = { version = "0.9", features = ["std", "std_rng"] }
